--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   firebase_auth: ^4.17.4
   firebase_core: ^2.25.4
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
