--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   firebase_auth: ^4.17.4
   firebase_core: ^2.25.4
   http: ^1.2.0
+  flutter_rating_bar: ^4.0.1
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
