--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   http: ^1.2.0
   flutter_rating_bar: ^4.0.1
   smooth_page_indicator: ^1.1.0
+  url_launcher: ^6.2.5
+  bloc: ^8.1.3
+  flutter_bloc: ^8.1.4
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
@@ -41,6 +45,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/mac_image.webp
+    - assets/forgot_password.webp
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
