--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   bloc: ^8.1.3
   flutter_bloc: ^8.1.4
   fluttertoast: ^8.2.4
+  flutter_svg: ^2.0.10+1
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +48,7 @@ flutter:
   assets:
     - assets/mac_image.webp
     - assets/forgot_password.webp
+    - assets/no_internet.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
