--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   fluttertoast: ^8.2.4
   flutter_svg: ^2.0.10+1
   lottie: ^3.1.0
+  connectivity_plus: ^5.0.2
+
 
 dev_dependencies:
   flutter_test:
